--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-firebase/app": "^15.1.1",
+    "@react-native-firebase/firestore": "^15.1.1",
+    "@react-native-firebase/storage": "^15.1.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
@@ -21,6 +24,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-firebase": "^5.6.0",
+    "react-native-image-picker": "^4.8.4",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.5",
